K8s/emptyDir.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-emptydir-pod
spec:
  containers:
  - name: kubernetes-simple-pod1
    image: arisu1000/simple-container-app:latest
    command: ["/bin/sh", "-ec", "while :; do echo 'Hello world'; sleep 5 ; done"] 
    volumeMounts:
    - mountPath: /emptydir1 # 컨테이너의 /emptyDir1에 마운트된다.
      name: emptydir-vol
    
  - name: kubernetes-simple-pod2
    image: arisu1000/simple-container-app:latest
    command: ["/bin/sh", "-ec", "while :; do echo 'Hello world'; sleep 5 ; done"] 
    volumeMounts:
    - mountPath: /emptydir2 # 컨테이너의 /emptyDir2에 마운트된다.
      name: emptydir-vol
  volumes:
  - name: emptydir-vol
    emptyDir: {}

# 같은 볼륨을 여러 곳에 마운트할 수 있다.
